@@ -1,5 +1,10 @@
 Change Log:
 
+Jan 5, 2008 - Jim Clark
+- Down to 8 Type safty warrnings by implemeing various Collection<Type> stuff. The ones that are
+   left are because of type casting wierdness that isn't Java best pratices.. but still works. They
+   will have to be reimplemented to fix.
+
 Jan 3-4, 2008 - Drew Avis
 - Added some tooltips for toolbar buttons
 - Added copy to clipboard toolbar button
